courses/430_programming-languages/assignment-4/tests/error/error03.sml
val prog =
  PROGRAM
    {decls=[],
     stmts=[ST_EXP {exp=EXP_BINARY {lft=EXP_NONE,opr=BOP_TIMES,rht=EXP_NUM 2}}]}
  : program
;
